--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
     "name": "chitkara_live",
     "version": "1.0.0",
+    "engines": {
+        "node": "14.17.5"
+    },
     "description": "this is a AaA product",
     "main": "index.js",
-    "node": "14.17.5",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node index.js"
