--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node index.js"
+        "start": "node index.js",
+        "prod_start": "NODE_ENV=production nodemon index.js"
     },
     "author": "AaA",
     "license": "ISC",
@@ -18,19 +19,31 @@
         "connect-mongo": "^4.6.0",
         "cookie-parser": "^1.4.6",
         "crypto": "^1.0.1",
+        "del": "^4.1.1",
         "dotenv": "^16.0.0",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
         "express-ejs-layouts": "^2.5.1",
         "express-session": "^1.17.2",
+        "gulp-cssnano": "^2.1.3",
+        "gulp-imagemin": "^6.0.0",
+        "gulp-rev": "^9.0.0",
+        "gulp-sass": "^4.0.2",
+        "gulp-uglify-es": "^1.0.4",
         "kue": "^0.11.6",
         "mongoose": "^6.1.0",
+        "morgan": "^1.9.1",
         "multer": "^1.4.4",
         "node-sass-middleware": "^0.11.0",
         "nodemailer": "^6.7.2",
         "passport": "^0.5.0",
         "passport-google-oauth": "^2.0.0",
         "passport-local": "^1.0.0",
+        "rotating-file-stream": "^1.4.1",
+        "run-sequence": "^2.2.1",
         "session": "^0.1.0"
+    },
+    "devDependencies": {
+        "gulp": "^4.0.2"
     }
 }
